# openglmandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CMake/: Findglfw3.cmake
glad/: glad.c  glad.h
